...
import com.example.mywatch.R

object WatchData {
    val item = listOf(
        WatchModel(
            id = 1,
            title = "Rolex Submariner",
            image = R.drawable.jam1,
            price = "Rp 150.000.000",
            shortDesc = "Ikon jam tangan selam mewah",
            LongtDesc = "Rolex Submariner adalah jam tangan selam legendaris yang dikenal dengan ketahanan, keandalan, dan desain ikoniknya. Diluncurkan pada tahun 1954, Submariner telah menjadi pilihan utama bagi para penyelam profesional dan kolektor jam tangan."
        ),
        WatchModel(
...
            price = "Rp 500.000",
            shortDesc = "Jam tangan stylish dengan harga terjangkau",
            LongtDesc = "Alexandre Christie adalah merek jam tangan yang menawarkan berbagai macam jam tangan dengan desain yang stylish dan harga yang terjangkau. Jam tangan ini cocok untuk digunakan sehari-hari."
        ),
        WatchModel(
            id = 10,
            title = "Swatch",
            image = R.drawable.jam10,
            price = "Rp 1.000.000",
            shortDesc = "Jam tangan Swiss yang colorful dan trendy.",
            LongtDesc = "Swatch adalah merek jam tangan Swiss yang terkenal dengan desainnya yang colorful dan trendy. Jam tangan ini cocok untuk digunakan oleh orang-orang yang ingin tampil gaya dan berbeda."),


...
