...
    }
    ) { paddingValues ->
        Column(modifier = Modifier.padding(paddingValues)) {
            OutlinedTextField(
                value = searchQuery,
                onValueChange = { watchViewModel.updateSearchQuery(it) },
                label = { Text("Cari Arloji...") },
                singleLine = true,
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(16.dp)
            )
            if (filteredList.isEmpty()) {
...
